# C

./: README.md
Project 1/: Project1.txt  Untitled Document 1
Project 1/22003392-22002932/: README.txt  comcli.c  comserver.c  makefile
Project 1/server/: CMakeLists.txt  comcli  comcli.c  comserver  comserver.c
Project 1/server2/: CMakeLists.txt  comcli  comcli.c  comserver  comserver.c
Project 1/serverGPT4/: CMakeLists.txt  comcli  comcli.c  comserver  comserver.c  makefile
Project 1/whatsapp/: Report.odt  Untitled 1.odt  comcli  comcli.c  comserver  comserver.c
Project 2/: Group 33 Project 2 report.odt  Makefile  tsl_deneme.c  tsl_deneme.h
Project 3/: client.c
Project 3/alikaanp3 (copy)/: client  client.c  consumer  consumer.c  makefile  mf.c  mf.h  mfserver  mfserver.c  producer  producer.c
Project 3/alikaanp3 (copy)/tmp/: mfserver.c
Project 3/cs342-p3/: Makefile  client.c  config.txt  mf.c  mf.h  mfserver.c
Project 3/proje3-hoca/: CMakeLists.txt
Project 3/proje3-hoca/cs342spring2024-p3-main/: 22002932-22002878.tar.xz  LICENSE  Makefile  README.md  app1  app1-2  app1-2.c  app1.c  app2  app2.c  consumer  consumer.c  mf.c  mf.config  mf.h  mfserver  mfserver.c  producer  producer.c
Project 3/proje3-hoca/cs342spring2024-p3-main/22002932-22002878/22002932-22002878/: mf.c  mf.h
Project 3/project3-new/: CMakeLists.txt
Project 4/: CMakeLists.txt  calisan  fatm  fatm.c  fatmo  fatmo.c  fatmod  fatmod.c  fatmod1  fatmod1.c  fatmodson  fatmodson.c  project 4 report.odt
Project 4/22002878-22002932/: README.txt  fatmod.c  makefile
(+5 files in other folders)
